# rust-mpc-exercise

./: .gitignore  Cargo.toml
src/: circuit.rs  lib.rs  main.rs  mul_triple.rs  network.rs  party.rs
src/circuit/: error.rs  flat_charstream.rs  parse_lines.rs  parser.rs  tokenizer.rs
src/mul_triple/: provider.rs
src/mul_triple/provider/: shared_seed.rs
src/network/: error.rs  in_memory.rs
src/party/: error.rs  network.rs  role.rs
