[package]
name = "mpc-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = { version = "0.8.5"}
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ocelot = { git = "https://github.com/GaloisInc/swanky", rev = "6b0ed1ad5" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev = "6b0ed1ad5" }